[package]
name = "lilosdbg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.71"
clap = { version = "4.3.5", features = ["derive"] }
debugdb = {git = "https://github.com/cbiffle/debugdb"}
gimli = "0.26.1"
object = "0.26"
parse_int = "0.6.0"
rangemap = "1.3.0"
regex = "1.8.4"
rustyline = "11.0.0"
thiserror = "1.0.40"
zip = "0.6.6"
